--- a/pipeline/params.yaml
+++ b/pipeline/params.yaml
@@ -4,7 +4,7 @@
 #-----------------------------------------------------------------------------#
 project: diabetes_readmission
 version: 0.1.0
-mode: full
+mode: quick
 seed: 42
 
 #-----------------------------------------------------------------------------#
