--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Run DVC Pipeline
+      - name: Pull Files
         working-directory: pipeline
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -53,8 +53,12 @@ jobs:
           TABLE_NAME: ${{ secrets.TABLE_NAME }}
           BUCKET_KEYS: ${{ secrets.BUCKET_KEYS }}
         run: |
-          pip install dvc[s3] uv
-          dvc pull
+          pip install dvc[s3]
+          if dvc pull; then
+            echo "All files pulled successfully."
+          else
+            echo "Some files could not be pulled. Proceeding with available files."
+          fi
 
       - name: Install System Dependencies
         run: |
@@ -121,7 +125,7 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Run DVC Pipeline
+      - name: Pull Files
         working-directory: pipeline
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -134,8 +138,12 @@ jobs:
           TABLE_NAME: ${{ secrets.TABLE_NAME }}
           BUCKET_KEYS: ${{ secrets.BUCKET_KEYS }}
         run: |
-          pip install dvc[s3] uv
-          dvc pull
+          pip install dvc[s3]
+          if dvc pull; then
+            echo "All files pulled successfully."
+          else
+            echo "Some files could not be pulled. Proceeding with available files."
+          fi
 
       - name: Install System Dependencies
         run: |
